src/objects/Source_Of_Federal_Funds__c.object
<CustomObject>
    <description>req #794</description>
    <fields>
        <fullName>Award_Reporting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Award Reporting</label>
        <referenceTo>Award_Reporting__c</referenceTo>
        <relationshipLabel>Source Of Federal Funds</relationshipLabel>
        <relationshipName>Source_Of_Federal_Funds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CFDA_Number__c</fullName>
        <label>CFDA Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federal_Agency_Name__c</fullName>
        <label>Federal Agency Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Federal_Department_Name__c</fullName>
        <description>#794</description>
        <label>Federal Department Name</label>
        <picklist>
            <picklistValues>
                <fullName>Department of Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Commerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Defense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Homeland Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Interior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Justice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Labor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U.S. Department of State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Treasury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Veteran Affairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental Protection Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Services Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Health and Human Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Housing and Urban Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Aeronautics and Space Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nuclear Regulatory Commission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Science Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office of Personnel Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small business Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Security Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U.S. Agency for International Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All other agencies</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Federal_Funds_Expended__c</fullName>
        <label>Other Federal Funds Expended</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sub_Award_Number__c</fullName>
        <description>req #794</description>
        <label>Sub Award Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Source Of Federal Fund</label>
    <nameField>
        <label>Source Of Federal Funds  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Source Of Federal Funds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>